<resources>
    <string name="app_name">NMedia</string>
    <string name="hello">Hello World!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_save">Save post</string>
    <string name="save">Save post</string>
    <string name="post_hint">Input post text</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="edit_text">Edit Message</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="chooser_share_post" >Choose post</string>
    <string name="edit_post">Edit post</string>
    <string name="description_video">description_video</string>
    <string name="description_play_video">description_play_video</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">%1$s liked post %2$s</string>
    <string name="notification_new_post">%1$s add new post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="no_posts">No posts</string>
    <string name="something_went_wrong">something went wrong</string>
    <string name="retry">Retry</string>
    <string name="description_post_attachment">Posts image</string>
    <string name="error_load">Loading ERROR!</string>
    <string name="error_refresh">Refresh ERROR!</string>
    <string name="new_posts">New Post</string>
    <string name="description_select_photo">Select photo</string>
    <string name="description_take_photo">Take photo</string>
    <string name="remove">Remove</string>
    <string name="description_photo">Photo</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="guest_entrance">Guest entrance</string>
    <string name="welcome">Welcome account</string>
</resources>